# BlankCProject

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/include/: logger.h  string.h
src/core/include/debug/: assert.h
src/core/src/: logger.c  string.c
